--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "functions": {
       "api/index.php": { "runtime": "vercel-php@0.3.1" }
   },
+  "outputDirectory": "public",
   "routes": [
       {
           "src": "/(.*)",
