--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
 STRIPE_KEY="${STRIPE_KEY}"
+
+XENDIT_SECRET_KEY="${XENDIT_SECRET_KEY}"
+XENDIT_PUBLIC_KEY="${XENDIT_PUBLIC_KEY}"
